--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.177.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
