--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vapi-ai/web": "^2.3.6",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
