--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "simplex-noise": "^4.0.3",
     "three": "^0.177.0"
   },
